@@ -14,41 +14,21 @@ The login table is a table that holds entries containing the columns username an
 
 For the frond end, it is using the SchoolManagementSystem Java project. In it's src folder, it contains an admin package, a dbutil package and a login package. The admin and login package use a model-view-controller pattern to develop each window of the application.
 * The dbutil package contains the java class file DatabaseConnection.java, which is used to establish a connection to the MySQL database on the schema "school" by using the appropriate credentials and URL of the database.
-* The login package contains LoginModel.java, LoginController.java, LoginModel.java, and Login.fxml. They are the model, controller, view and fxml files respectively for the initial windows that appears when the program is launched.
-* The admin package contains AdminModel.java, AdminController.java, and Admin.fxml. They are the model, controller, and fxml files respectively for the windows that launches upon successful login into the application via the first window.
+* The login package contains LoginModel.java, LoginController.java, LoginModel.java, and Login.fxml. They are the model, controller, view and fxml files respectively for the initial window that appears when the program is launched.
+* The admin package contains StudentData.java, AdminModel.java, AdminController.java, and Admin.fxml. The StudentData.java file defines the structure of each student in the database, and the rest of the fles are the model, controller, and fxml files respectively for the window that launches upon successful login into the application via the first window.
 
 ## Getting Started
 
 ### Prerequisites
-The following needed to be installed via commands in the terminal:
-* In the main project folder:
-```sh 
-npx create-react-app folder_name
-```
+The JavaFX SDK needed to be imported as a library in the build path.
 
+The following run configurations needed to be set as VM arguments:
 ```sh
-npm init -y
+--module-path "C:\Program Files (x86)\Java\jre1.8.0_91\lib\javafx-sdk-15.0.1\lib" 
+--add-modules javafx.controls,javafx.fxml
 ```
 
-```sh
-npm install express cors mongoose dotenv
-```
-
-* In the backend folder:
-
-```sh
-npm install -g nodemon
-```
-
-* In the src folder:
-```sh
-npm install bootstrap
-```
-
-```sh
-npm install react-router-dom
-```
-
+A MySQL JDBC driver had to be imported to provide the IDE a connection to the MySQL database.
 
 ## Usage
 The basic functionality of the website is as follows:
